--- a/style.css
+++ b/style.css
@@ -623,6 +623,7 @@ a:hover{
 .footer{
     padding-top:2rem;
     margin-top:2rem;
+	margin:0 auto;
     border-top:solid 1px #eff0f1
 }
 @media screen and (min-width: 64em){
