--- a/style.css
+++ b/style.css
@@ -436,6 +436,22 @@ a:hover{
         padding:2rem 1rem
     }
 }
+.menu-outer {
+	height: 84px;
+	background: url(images/bar-bg.jpg) repeat-x;
+}
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+ul#horizontal-list {
+	min-width: 696px;
+	list-style: none;
+	padding-top: 20px;
+	}
+	ul#horizontal-list li {
+		display: inline;
+	}
 .project-name{
     margin-top:0;
     margin-bottom:0.1rem
