--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ a:hover{
         padding:2rem 1rem
     }
 }
+
+/* Navigation menu up top of page below header */
 .menu-outer {
 	height: 84px;
 	background: url(images/bar-bg.jpg) repeat-x;
@@ -108,6 +110,12 @@ ul#horizontal-list {
 ul#horizontal-list li {
 	display: inline;
 }
+
+/* Grid Shit */
+.game-container {
+  display: inline-grid;
+}
+
 .project-name{
     margin-top:0;
     margin-bottom:0.1rem
