images in grid possibly?
maybe pls?

--- a/style.css
+++ b/style.css
@@ -124,6 +124,22 @@ ul#horizontal-list li {
 	text-align: center;
 }
 
+.HITMAN {
+	placeholder
+}
+
+.H2 {
+	placeholder
+}
+
+.DEMD {
+	background-image: https://g2-mods.com/images/demd.jpg
+}
+
+.HMA {
+	background-image: https://g2-mods.com/images/hma.jpg
+}
+
 .project-name{
     margin-top:0;
     margin-bottom:0.1rem
