--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ ul#horizontal-list li {
 }
 
 .griditem-demd {
-	background-image: url(g2-mods.com\images\demd.jpg);
+	background-image: url(g2-mods.com/images/demd.jpg);
 }
 
 .project-name{
