--- a/style.css
+++ b/style.css
@@ -121,20 +121,11 @@ ul#horizontal-list li {
 	grid-template-rows: 1fr 1fr;
 	grid-template-areas: ". ." ". .";
 	justify-items: center;
-	margin: auto;
+	margin: 50px;
 	text-align: center;
 }
 
-.griditem-h2016 {
-	text-align: center;
-}
-
-.griditem-h2016 img {
-	max-width:100%;
-	max-height:100%;
-}
-
-.griditem-h2 {
+.griditem-h2 a {
 	text-align: center;
 }
 
@@ -143,7 +134,16 @@ ul#horizontal-list li {
 	max-height:100%;
 }
 
-.griditem-demd {
+.griditem-h2016 a {
+	text-align: center;
+}
+
+.griditem-h2016 img {
+	max-width:100%;
+	max-height:100%;
+}
+
+.griditem-demd a {
 	text-align: center;
 }
 
@@ -152,7 +152,7 @@ ul#horizontal-list li {
 	max-height:100%;
 }
 
-.griditem-hma {
+.griditem-hma a {
 	text-align: center;
 }
 
