--- a/style.css
+++ b/style.css
@@ -134,19 +134,15 @@ div.menu-outer li a:hover:not(.active) {
 	display: grid;
 	grid-row-gap: 25px;
 	grid-column-gap: 25px;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr;
-	grid-template-areas: ". ." ". .";
-	justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 	margin: 50px;
 	text-align: center;
 }
 
 .griditem-img img {
 	max-width:100%;
-	max-height:100%;
-    height: auto;
-    width: auto\9;
+    width: auto;
 }
 
 .project-name{
