--- a/style.css
+++ b/style.css
@@ -76,16 +76,18 @@ a:hover{
 /* Top left Logo / Home Button */
 .logo {
 	background-color: #1f2125;
+	padding-left:12px
 }
 
 .logo a {
-	background-image: url('images/g2logo.png');
+	background-image: url('images/g2logo.svg');
 	background-position: left;
 	background-repeat: no-repeat;
-	padding-left: 75px;
+	padding-left: 45px;
 	display: block;
 	color: #08ac8c;
 	font-size: 2em;
+	background-size: 35px;
 }
 
 .page-header {
