--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ div.menu-outer li a:hover:not(.active) {
 }
 .footer-content{
     background-color: #1f2125;
-    border-top: 2px solid #05be99;
+    /*border-top: 2px solid #05be99;*/
     font-size:13px;
     padding: 15px;
     text-align: center;
