--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
-html{
+html {
 	lang="en"
     font-family:sans-serif;
     -ms-text-size-adjust:100%;
@@ -7,7 +7,7 @@ html{
     background-color:#1f2125;
 }
 
-body{
+body {
     padding:0;
     margin:0;
     font-family:"Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -16,29 +16,26 @@ body{
     color:#606c71
 }
 
-a{
+a {
     background-color:transparent
+	color:#2c91d0;
+    text-decoration:none
 }
 
-a:active,a:hover{
+a:active,a:hover {
     outline:0
 }
 
-h1{
+h1 {
     font-size:2em;
     margin:0.67em 0
 }
 
-*{
+* {
     box-sizing:border-box
 }
 
-a{
-    color:#1e6bb8;
-    text-decoration:none
-}
-
-a:hover{
+a:hover {
     text-decoration:underline
 }
 
@@ -54,27 +51,27 @@ a:hover{
     transition:color 0.2s, background-color 0.2s, border-color 0.2s
 }
 
-.btn:hover{
+.btn:hover {
     color:rgba(255,255,255,0.8);
     text-decoration:none;
     background-color:rgba(255,255,255,0.2);
     border-color:rgba(255,255,255,0.3)
 }
 
-@media screen and (min-width: 64em){
+@media screen and (min-width: 64em) {
     .btn{
         padding:0.75rem 1rem
     }
 }
 
-@media screen and (min-width: 42em) and (max-width: 64em){
+@media screen and (min-width: 42em) and (max-width: 64em) {
     .btn{
         padding:0.6rem 0.9rem;
         font-size:0.9rem
     }
 }
 
-@media screen and (max-width: 42em){
+@media screen and (max-width: 42em) {
     .btn{
         display:block;
         width:100%;
@@ -166,52 +163,62 @@ div.menu-outer li a:hover:not(.active) {
     width: auto;
 }
 
-.project-name{
+.project-name {
     margin-top:0;
     margin-bottom:0.1rem
 }
-@media screen and (min-width: 64em){
+
+@media screen and (min-width: 64em) {
     .project-name{
         font-size:3.25rem
     }
 }
-@media screen and (min-width: 42em) and (max-width: 64em){
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
     .project-name{
         font-size:2.25rem
     }
 }
-@media screen and (max-width: 42em){
+
+@media screen and (max-width: 42em) {
     .project-name{
         font-size:1.75rem
     }
 }
-.project-tagline{
+
+.project-tagline {
     margin-bottom:2rem;
     font-weight:normal;
     opacity:0.7
 }
-@media screen and (min-width: 64em){
+
+@media screen and (min-width: 64em) {
     .project-tagline{
         font-size:1.25rem
     }
 }
-@media screen and (min-width: 42em) and (max-width: 64em){
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
     .project-tagline{
         font-size:1.15rem
     }
 }
-@media screen and (max-width: 42em){
+
+@media screen and (max-width: 42em) {
     .project-tagline{
         font-size:1rem
     }
 }
-.main-content{
+
+.main-content {
     word-wrap:break-word
 }
-.main-content :first-child{
+
+.main-content :first-child {
     margin-top:0
 }
-@media screen and (min-width: 64em){
+
+@media screen and (min-width: 64em) {
     .main-content{
         max-width:64rem;
         padding:2rem 6rem;
@@ -219,28 +226,33 @@ div.menu-outer li a:hover:not(.active) {
         font-size:1.1rem
     }
 }
-@media screen and (min-width: 42em) and (max-width: 64em){
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
     .main-content{
         padding:2rem 4rem;
         font-size:1.1rem
     }
 }
-@media screen and (max-width: 42em){
+
+@media screen and (max-width: 42em) {
     .main-content{
         padding:2rem 1rem;
         font-size:1rem
     }
 }
-.main-content h1{
+
+.main-content h1 {
     margin-top:2rem;
     margin-bottom:1rem;
     font-weight:normal;
     color:#159957;
 }
-.main-content p{
+
+.main-content p {
     margin-bottom:1em
 }
-.footer-content{
+
+.footer-content {
     background-color: #1f2125;
     border-top: 2px solid #05be99;
     font-size:13px;
@@ -252,7 +264,8 @@ div.menu-outer li a:hover:not(.active) {
     right: 0;
     height: 50px;
     box-shadow: 0 150vh 0 150vh #1f2125;
-} 
+}
+
 .aligncenter {
     display: block;
     margin-left: auto;
