--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
 }
 
 a {
-    background-color:transparent
+    background-color:transparent;
 	color:#2c91d0;
-    text-decoration:none
+    text-decoration:none;
 }
 
 a:active,a:hover {
