Fix text to be ontop of image
When I hop out, they gon' call me Rico Bruce (Bruce, Bruce, Bruce)
When I drop the top, I turn that shit into a coupe (Huh, yeah)

--- a/style.css
+++ b/style.css
@@ -198,9 +198,15 @@ div.menu-outer li a:hover:not(.active) {
 	text-align: center;
 }
 
-.griditem-img img {
+.griditem-game img {
 	max-width:100%;
     width: auto;
+}
+
+.griditem-game a {
+	position: relative;
+	bottom: 250px;
+	line-height: 0;
 }
 
 .project-name {
