--- a/style.css
+++ b/style.css
@@ -210,7 +210,11 @@ div.menu-outer li a:hover:not(.active) {
 }
 
 .griditem-game a:hover {
-	border: 1px solid green ;
+	border:solid;
+	border-width: 20px
+	background-color; green;
+	padding: 20px;
+	
 }
 
 .project-name {
