--- a/style.css
+++ b/style.css
@@ -210,11 +210,10 @@ div.menu-outer li a:hover:not(.active) {
 }
 
 .griditem-game a:hover {
-	border:solid;
+	border: solid;
 	border-width: 20px
-	background-color; green;
-	padding: 20px;
-	
+	background-color: green;
+	padding: 25px;
 }
 
 .project-name {
