--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ div.menu-outer li a:hover:not(.active) {
 
 .griditem-game a:hover {
 	border: solid;
-	border-width: 20px
+	border-width: 20px;
 	border-color: green;
 	padding: 25px;
 }
