PUT SOME RESPEK ON MY COMMIT
THICC AF WIDE FONT

--- a/style.css
+++ b/style.css
@@ -300,6 +300,8 @@ div.menu-outer li a:hover:not(.active) {
 	position: relative;
 	bottom: 50%;
 	line-height: 0;
+	font-size: 1.2em;
+	letter-spacing: 2px;
 }
 
 .griditem-game a:hover {
