Apparently font-color isn't a thing
CSS why?

--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ div.menu-outer li a:hover:not(.active) {
 	bottom: 50%;
 	line-height: 0;
 	font-size: 2em;
-	font-color: grey;
+	color: grey;
 }
 
 .griditem-game a:hover {
