Fix border colours
Final update on hover text? Nah not likely.

--- a/style.css
+++ b/style.css
@@ -305,9 +305,9 @@ div.menu-outer li a:hover:not(.active) {
 }
 
 .griditem-game a:hover {
-	border: solid;
-	border-width: 10px;
+	border: solid Glacier;
 	border-color: Glacier;
+	border-width: 10px;
 	padding: 25px;
 }
 
