--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ h1 {
     }
 }
 
+/* Preload images */
+div#preload {
+	display: none;
+}
+
 /* Top left Logo / Home Button */
 .logo {
 	position: absolute;
