update font colour to make it easier to read

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
-	color: #606c71;
+	color: #8D9FA6;
 }
 
 a {
